--- a/Paramdomizer/Paramdomizer.csproj
+++ b/Paramdomizer/Paramdomizer.csproj
@@ -41,9 +41,6 @@
     <Reference Include="Costura, Version=3.1.0.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
       <HintPath>..\packages\Costura.Fody.3.1.0\lib\net46\Costura.dll</HintPath>
     </Reference>
-    <Reference Include="MeowDSIO">
-      <HintPath>..\..\DSIO-Testing\MeowDSIO\bin\Release\MeowDSIO.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.3.3, Culture=neutral, PublicKeyToken=8985beaab7ea3f04, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft-WindowsAPICodePack-Core.1.1.3.3\lib\net452\Microsoft.WindowsAPICodePack.dll</HintPath>
     </Reference>
@@ -99,6 +96,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="paramdomizer.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MeowDSIO\MeowDSIO\MeowDSIO.csproj">
+      <Project>{4ad69470-8146-4d20-94f0-da9844eee5a2}</Project>
+      <Name>MeowDSIO</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.3.1.3\build\Fody.targets" Condition="Exists('..\packages\Fody.3.1.3\build\Fody.targets')" />
